deploy/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-convertir-svc
spec:
  selector:
    app: api-convertir
  ports:
    - protocol: TCP
      port: 80
      targetPort:  8092
  type: ClusterIP
