deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-convertir-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec: 
  rules:
  - host: api-convertir.tssw.cl
    http:
      paths:
      - backend:
          service:
            name: api-convertir-svc
            port:
              number: 80
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - api-convertir.tssw.cl
    secretName: api-convertir-ingress-secret
